--- a/front/app/package.json
+++ b/front/app/package.json
@@ -17,8 +17,11 @@
     "@types/node": "^18.6.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.7.4"
   }
 }
